// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SendMoreCTA Component renders correctly for aws free plan (cta to upgrade) 1`] = `
<React.Fragment>
  Need to send more?
   
  <UnstyledLink
    Component={[Function]}
    to="/account/billing"
  >
    Upgrade your account.
  </UnstyledLink>
   
  <UnstyledLink
    external={true}
    to="https://support.sparkpost.com/customer/portal/articles/2030894"
  >
    Learn more about these limits.
  </UnstyledLink>
  <Modal
    onClose={[Function]}
    open={false}
  >
    <Panel
      title="Request Daily Limit Increase"
    >
      <ReduxForm
        currentLimit={1000}
        onCancel={[Function]}
        onSubmit={[Function]}
      />
    </Panel>
  </Modal>
</React.Fragment>
`;

exports[`SendMoreCTA Component renders correctly for customers who can request limit bump 1`] = `
<React.Fragment>
  Need to send more?
   
  <span>
    <UnstyledLink
      Component={[Function]}
      onClick={[Function]}
    >
      Submit a request.
    </UnstyledLink>
  </span>
   
  <UnstyledLink
    external={true}
    to="https://support.sparkpost.com/customer/portal/articles/2030894"
  >
    Learn more about these limits.
  </UnstyledLink>
  <Modal
    onClose={[Function]}
    open={false}
  >
    <Panel
      title="Request Daily Limit Increase"
    >
      <ReduxForm
        currentLimit={1000}
        onCancel={[Function]}
        onSubmit={[Function]}
      />
    </Panel>
  </Modal>
</React.Fragment>
`;

exports[`SendMoreCTA Component renders support form correctly 1`] = `
<React.Fragment>
  Need to send more?
   
  <span>
    <UnstyledLink
      Component={[Function]}
      onClick={[Function]}
    >
      Submit a request.
    </UnstyledLink>
  </span>
   
  <UnstyledLink
    external={true}
    to="https://support.sparkpost.com/customer/portal/articles/2030894"
  >
    Learn more about these limits.
  </UnstyledLink>
  <Modal
    onClose={[Function]}
    open={true}
  >
    <Panel
      title="Request Daily Limit Increase"
    >
      <ReduxForm
        currentLimit={1000}
        onCancel={[Function]}
        onSubmit={[Function]}
      />
    </Panel>
  </Modal>
</React.Fragment>
`;

exports[`SendMoreCTA Component renders when email address not verified 1`] = `
<React.Fragment>
  Need to send more?
   
  <UnstyledLink
    onClick={[Function]}
  >
    Verify your email.
  </UnstyledLink>
   
  <UnstyledLink
    external={true}
    to="https://support.sparkpost.com/customer/portal/articles/2030894"
  >
    Learn more about these limits.
  </UnstyledLink>
  <Modal
    onClose={[Function]}
    open={false}
  >
    <Panel
      title="Request Daily Limit Increase"
    >
      <ReduxForm
        currentLimit={1000}
        onCancel={[Function]}
        onSubmit={[Function]}
      />
    </Panel>
  </Modal>
</React.Fragment>
`;
